[package]
name = "librectf"
version = "0.1.0"

[workspace]
members = [
    "components/admin",
    # "components/api",
    "components/core",
    "components/filestore",
    "components/frontend",
]

[dependencies]
actix-web = "0.7"
config = { version = "0.9", default_features = false, features = ["toml"] }
env_logger = "0.6"
serde = "1.0"
serde_derive = "1.0"
structopt = "0.2"

admin = { path = "./components/admin" }
# api = { path = "./components/api" }
core = { path = "./components/core" }
filestore = { path = "./components/filestore" }
frontend = { path = "./components/frontend" }

[patch.crates-io]
tera = { git = "https://github.com/Keats/tera.git", branch = "v1" }
