[package]
name = "librectf"
version = "0.1.0"
authors = ["Michael Zhang <iptq@protonmail.com>"]
edition = "2018"

[workspace]
members = [
    "core",
    "frontend",
]

[dependencies]
diesel = { version = "1.4", optional = true }
structopt = "0.2"
tokio = "0.1"
warp = "0.1"

core = { path = "./core" }
frontend = { path = "./frontend" }

[features]
default = ["sqlite"]
mysql = ["core/mysql"]
postgres = ["core/postgres"]
sqlite = ["core/sqlite"]
