[package]
name = "frontend"
version = "0.1.0"
authors = ["Michael Zhang <iptq@protonmail.com>"]
edition = "2018"

[dependencies]
cookie = { version = "0.11", features = ["secure", "percent-encode"] }
core = { path = "../core" }
http = "0.1"
lazy_static = "0.1"
log = "0.4"
packer = "0.3"
serde = "1.0"
serde_derive = "1.0"
serde_urlencoded = "0.5"
tera = "1.0.0-alpha.4"
time = "0.1"
warp = "0.1"
wtforms = { path = "../../wtforms" }

[features]
default = ["mysql", "postgres", "sqlite"]
mysql = ["core/mysql"]
postgres = ["core/postgres"]
sqlite = ["core/sqlite"]
