[package]
name = "admin"
version = "0.1.0"
authors = ["Michael Zhang <failed.down@gmail.com>"]

[[bin]]
name = "admin"
path = "src/bin.rs"

[dependencies]
core = { path = "../../components/core" }
diesel = { version = "1.3", default_features = false }
env_logger = "0.5"
failure = "0.1"
migrations_internals = "1.3"
log = "0.4"
serde = "1.0"
serde_derive = "1.0"
shiplift = { version = "0.3", git = "https://github.com/softprops/shiplift.git" }
structopt = "0.2"
toml = "0.4"
