[package]
name = "admin"
version = "0.1.0"
authors = ["Michael Zhang <failed.down@gmail.com>"]

[[bin]]
name = "admin"
path = "src/bin.rs"

[dependencies]
core = { path = "../../components/core" }
diesel = { version = "1.3", default_features = false }
env_logger = "0.5"
embed = { git = "https://github.com/iptq/embed" }
failure = "0.1"
hyper = "0.10"
log = "0.4"
migrations_internals = "1.3"
multipart = { version = "0.15", git = "https://github.com/iptq/multipart", default_features = false, features = ["client", "hyper"] }
serde = "1.0"
serde_derive = "1.0"
structopt = "0.2"
tempfile = "3.0"
toml = "0.4"
