[package]
name = "api"
version = "0.1.0"
authors = ["Michael Zhang <failed.down@gmail.com>"]

[dependencies]
actix-web = "0.7"
bcrypt = "0.2"
chrono = { version = "0.4", features = ["serde"] }
diesel = { version = "1.3", features = ["chrono", "mysql"] }
failure = "0.1"
futures = "0.1"
jsonwebtoken = "5.0"
log = "0.4"
core = { path = "../../components/core" }
r2d2 = "0.8"
r2d2-diesel = "1.0"
redis = "0.9"
serde = "1.0"
serde_derive = "1.0"
serde_json = "1.0"
structopt = "0.2"
