[package]
name = "core"
version = "0.1.0"
authors = ["Michael <localhost>"]
build = "src/build.rs"

[dependencies]
cache = { path = "../cache" }
chrono = "0.4"
config = "0.9"
diesel = { version = "1.3", features = ["chrono", "mysql"] }
failure = "0.1.1"
jail = { path = "../jail" }
lazy_static = "1.0"
log = "0.4"
r2d2 = "0.8"
r2d2-diesel = "1.0"
regex = "1.0"
serde = "1.0"
serde_derive = "1.0"
serde_json = "1.0"
structopt = "0.2"
