[package]
name = "core"
version = "0.1.0"
authors = ["Michael <localhost>"]

[dependencies]
chrono = "0.4"
config = { version = "0.9", default_features = false, features = ["toml"] }
diesel = { version = "1.3", features = ["chrono", "mysql"] }
failure = "0.1.1"
futures = "0.1"
lazy_static = "1.0"
log = "0.4"
r2d2 = "0.8"
r2d2-diesel = "1.0"
redis-async = "0.4"
regex = "1.0"
serde = "1.0"
serde_derive = "1.0"
serde_json = "1.0"
structopt = "0.2"
