[package]
name = "filestore"
version = "0.1.0"
authors = ["Michael Zhang <failed.down@gmail.com>"]

[features]
default = ["server"]
server = []

[dependencies]
actix-web = "0.7"
failure = "0.1"
futures = "0.1"
log = "0.4"
sha2 = "0.8"
serde = "1.0"
serde_derive = "1.0"
structopt = "0.2"
tempfile = "3"
