[package]
name = "frontend"
version = "0.1.0"
authors = ["Michael Zhang <failed.down@gmail.com>"]

[dependencies]
actix-web = "0.7"
core = { path = "../core" }
embed = { git = "https://github.com/iptq/embed" }
failure = "0.1"
futures = "0.1"
lazy_static = "1.0"
log = "0.4"
serde = "1.0"
serde_derive = "1.0"
tera = "1.0.0-alpha.2"
